<?xml version="1.0"?>
<package format="3">
  <name>sensor_node</name>
  <version>0.0.1</version>
  <description>ROS2 temperature sensor simulation node with OOP</description>
  <maintainer email="jin@example.com">Jin Gyeom</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
